--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>flamingo.png">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
-    <title>new-news</title>
+    <title>Economic News</title>
   </head>
   <body>
     <noscript>
